--- a/style.css
+++ b/style.css
@@ -4,7 +4,12 @@ html {
   font-family: Lato
 }
 
-nav a {
+nav {
+  max-width: 1000px;
+  margin: auto;
+}
+
+nav a, h1 a {
   color:inherit;
   text-decoration: none;
 }
@@ -14,13 +19,18 @@ nav > h3 {
   margin-right: 15px;
 }
 
+nav > h3.current {
+  text-decoration: underline;/* for chrome */
+  text-decoration: underline double #666;
+}
+
 h1 {
   text-align: center;
   font-size: 3em;
 }
 
 section {
-  margin-top: 10px;
+  margin-top: 20px;
   margin-bottom: 50px;
   max-width: 1000px;
   margin-left: auto;
