--- a/style.css
+++ b/style.css
@@ -59,6 +59,11 @@ article img {
   max-width: 100%;
 }
 
+article img.caching {
+  display:none;
+}
+
+
 footer {
   text-align:center;
   font-size:0.7em
